--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </header>
 
     <menu>
-        <section class="about-us">
+        <section id="about-us" class="about-us section">
             <div class="container">
                 <h2 class="section-title">o nas</h2>
 
@@ -81,6 +81,101 @@
                 <p>Przygoda dla całej rodziny</p>
             </div>
         </div>
+
+        <section id="offer" class="offer section">
+            <div class="container">
+                <h2 class="section-title">oferta</h2>
+
+                <p class="offer-info">Wybierz jedną z naszych wspaniałych ofert!</p>
+
+                <div class="offer__boxes">
+                    <div class="offer-box">
+                        <h3>Demo</h3>
+                        <p class="price">$0</p>
+                        <ul class="options">
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                            <li class="inaccessible"><i class="fa-solid fa-minus"></i> opcja poza pakietem</li>
+                            <li class="inaccessible"><i class="fa-solid fa-minus"></i> opcja poza pakietem</li>
+                            <li class="inaccessible"><i class="fa-solid fa-minus"></i> opcja poza pakietem</li>
+                        </ul>
+
+                        <div class="choose-btn">
+                            <button>Wybierz</button>
+                        </div>
+                    </div>
+                    <div class="offer-box">
+                        <h3>Standard</h3>
+                        <p class="price">$99</p>
+                        <ul class="options">
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                            <li class="inaccessible"><i class="fa-solid fa-minus"></i> opcja poza pakietem</li>
+                            <li class="inaccessible"><i class="fa-solid fa-minus"></i> opcja poza pakietem</li>
+                        </ul>
+
+                        <div class="choose-btn">
+                            <button>Wybierz</button>
+                        </div>
+                    </div>
+                    <div class="offer-box">
+                        <h3>Premium</h3>
+                        <p class="price">$299</p>
+                        <ul class="options">
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                            <li><i class="fa-solid fa-check"></i> opcja w pakiecie</li>
+                        </ul>
+
+                        <div class="choose-btn">
+                            <button>Wybierz</button>
+                        </div>
+                    </div>
+                </div>
+
+                <p class="offer-info">Jeśli chciałbyś ustalić z nami indywidualne preferencje, zapraszamy do kontaktu!</p>
+            </div>
+        </section>
+
+        <section class="contact" id="contact">
+            <div class="container">
+                <h2 class="section-title"><i class="fa-solid fa-tree"></i> Forest</h2>
+
+                <div class="contact-boxes">
+                    <div class="contact-box">
+                        <h3>O nas</h3>
+
+                        <ul>
+                            <li>Historia</li>
+                            <li>Parki</li>
+                            <li>Opinie</li>
+                        </ul>
+                    </div>
+                    <div class="contact-box">
+                        <h3>Nasza firma</h3>
+
+                        <ul>
+                            <li>Praca</li>
+                            <li>Kadry</li>
+                            <li>Zarząd</li>
+                        </ul>
+                    </div>
+                    <div class="contact-box">
+                        <h3>Dokumenty</h3>
+
+                        <ul>
+                            <li>Wnioski</li>
+                            <li>Rezerwacje</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+
     </menu>
 
     <script src="/src/js/script.js"></script>
